# governance-core

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  STATE.md  STATE_ARCHIVE.md  pyproject.toml  revocation.json  revocation.json.sig
.claude/: settings.local.json
.github/workflows/: candidate-intake.yml  release.yml
.governance/: config.json
constitution/: agent.core.md  total.md
docs/: architecture.md  core-manual.md
governance_core/: __init__.py  cli.py  config.py  installer.py  runtime_import_audit.py  sensitive_scan.py  version_util.py
governance_core/agent_rules/: README.md  shared.allow_commands.txt  shared.deny.txt  shared.deny_commands.txt  shared.deny_commands_regex.txt
governance_core/agents/: README.md  core-auditor.md  design-system-owner.md
governance_core/auth/: __init__.py  _ed25519.py  codec.py  pubkey.json  revocation.py
governance_core/candidates/: __init__.py  collect.py  envelope.py  ledger.py  registry.py  rejected.py  rejected_registry.json  uplink.py
governance_core/clauses/: README.md  art_00_ritual.md  art_01_project_architecture.md  art_02_directory_responsibilities.md  art_02b_core_audit_responsibilities.md  art_03_contracts.md  art_04_config_management.md  art_04b_shared_runtime_state.md  art_05_cross_agent_collaboration.md  art_07_code_standards.md  art_09_git_discipline.md  (+8 more)
maintainer/: README.md  auto_curate_enabled  auto_promote_security_surface.json  candidate_intake.py  consumer_registry.json  curate_gate.py  curate_routine.md  gen_signing_key.py  issue_auth_code.py  reject_candidate.py  renewal_status.py  revoke_consumer.py  test_candidate_intake.py  test_curate_gate.py
tests/: README.md
(+241 files in other folders)
